Home page (partial)

--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -1,1 +1,31 @@
 footer.footer
+    .footer__primary
+        .container
+            .row
+                .col-xs-24.col-sm-6
+                    .footer__wrapper
+                        .footer__icon
+                        p.footer__text Envío sin cargo
+                .col-xs-24.col-sm-6
+                    .footer__wrapper
+                        .footer__icon
+                        p.footer__text Todos los medios de pago
+                .col-xs-24.col-sm-6
+                    .footer__wrapper
+                        .footer__icon
+                        p.footer__text Cotizaciones especiales
+                .col-xs-24.col-sm-6
+                    .footer__wrapper
+                        .footer__icon
+                        p.footer__text Satisfacción garantizada
+    .footer__secondary
+        .container
+            .row
+                .col-xs-24.col-sm-6
+                    .footer__logo
+                        img(src="images/logo-black.png")
+                .col-xs-24.col-sm-6
+                    
+                .col-xs-24.col-sm-6
+                .col-xs-24.col-sm-6
+                    
