--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -1,2 +1,20 @@
 header.header
-    
+    .container.header__container
+        .header__logo.wow.fadeInDown
+            a(href="/")
+                img(src="/images/logo-black.png")
+        nav.header__nav
+            ul.header__menu
+                each item in site.data.header
+                    li
+                        a(href=item.url)= item.name
+        .header__buttons
+            button.header__button
+                i.material-icons search
+            a.header__button
+                i.fa.fa-shopping-bag
+        .header__hamburguer.wow.fadeInRight
+            span
+            span
+            span
+            
