--- a/src/index.jade
+++ b/src/index.jade
@@ -2,3 +2,85 @@ extends _layouts/base
 
 block content
     main.home
+        section.home__hero
+            //- +slider('home__hero__slider')
+            .home__hero__slide
+                .home__hero__col.home__hero__col--image
+                    .home__hero__data
+                        h1.home__hero__title tesoros escondidos
+                        p.home__hero__text oasis de san juan
+                .home__hero__col.home__hero__col--pattern
+                .home__hero__blanc-bottle
+                    img(src="images/home/blanc.png")
+                .home__hero__blanc-bottle
+                    img(src="images/home/blanc.png")
+
+        section.home__malbec
+            .container-fluid
+                .row.nopadding
+                    .col-xs-24.col-sm-6
+                        .home__malbec__image.home__malbec__image--left
+                            img(src='../images/home/grapes.jpg')
+                    .col-xs-24.col-sm-12
+                        .home__malbec__wrapper
+                            .home__malbec__data
+                                h2.home__malbec__title malbec
+                                p.home__malbec__text Vino joven, de agradable concentración y estructura, frutado y vivaz. Con notas de frutos rojos.
+                                h2.home__malbec__price $250
+                                a.home__malbec__button Comprar ahora
+                            .home__malbec__image.home__malbec__image--bottle
+                                img(src="images/home/malbec-1.png")
+                    .col-xs-24.col-sm-6
+                        .home__malbec__image.home__malbec__image--right
+                            img(src='../images/home/marale3.jpg')
+        section.home__blanc
+            .container-fluid
+                .row.nopadding
+                    .col-xs-24.col-sm-12
+                        .home__blanc__wrapper
+                            .home__blanc__data
+                                h2.home__blanc__title Sauvignon Blanc
+                                p.home__blanc__text Frutos silvestres y violetas con exquisita complejidad.
+                                h2.home__blanc__price $250
+                                a.home__blanc__button Comprar ahora
+                            .home__blanc__image.home__blanc__image--bottle
+                                img(src="images/home/blanc.png")
+                    .col-xs-24.col-sm-12
+                        .home__blanc__image.home__blanc__image--right
+                                img(src="images/home/hero.jpg")
+        section.home__malbec-reserva
+            .container-fluid
+                .row.nopadding
+                    .col-xs-24.col-sm-6
+                        .home__malbec-reserva__image
+                            img(src="images/home/slide1.jpg")
+                    .col-xs-24.col-sm-6
+                        .home__malbec-reserva__image.home__malbec-reserva__image--right
+                            img(src="images/home/valle2.jpg")
+                    .col-xs-24.col-sm-12
+                        .home__malbec-reserva__wrapper
+                            .home__malbec-reserva__image.home__malbec-reserva__image--bottle
+                                img(src="images/home/malbec-2.png")
+                            .home__malbec-reserva__data
+                                h2.home__malbec-reserva__title Sauvignon Blanc
+                                p.home__malbec-reserva__text Frutos silvestres y violetas con exquisita complejidad.
+                                h2.home__malbec-reserva__price $250
+                                a.home__malbec-reserva__button Comprar ahora
+        section.home__pasita
+            .container-fluid
+                .row.nopadding
+                    .col-xs-24.col-sm-6
+                        .home__pasita__image.home__pasita__image--left
+                                img(src="images/home/finca4.jpg")
+                    .col-xs-24.col-sm-12
+                        .home__pasita__wrapper
+                            .home__pasita__image.home__pasita__image--bottle
+                                img(src="images/home/malbec-2.png")
+                            .home__pasita__data
+                                h2.home__pasita__title pasita 2017
+                                p.home__pasita__text Vino joven, de agradable concentración y estructura, frutado y vivaz. Con notas de frutos rojos.
+                                h2.home__pasita__price $250
+                                a.home__pasita__button Comprar ahora
+                    .col-xs-24.col-sm-6
+                        .home__pasita__image.home__pasita__image--right
+                                img(src="images/home/marale2.jpg")
