--- a/src/_styles/mixins/_variables.scss
+++ b/src/_styles/mixins/_variables.scss
@@ -1,15 +1,14 @@
 $white: #fff;
 $black: #000;
 $corpBlack: #3e372c;
-$darkestGray: #333;
+$darkestGray: #444340;
 $darkGray: #787871;
 $midGray: #999;
 $lightGray: #ebebeb;
 $lightestGray: #f4f7f8;
-$blue: #053f7a;
-$blueGray: #bbc9c9;
+$lila: #7166a5;
 
-$mainColor: $blue;
+$mainColor: $lila;
 $link: $mainColor;
 $linkHover: $mainColor + #333;
 $text: $white;
@@ -35,4 +34,4 @@ $duration: 0.3s;
 $easing: cubic-bezier(.785, .135, .15, .86);
 $easingLight: ease;
 
-$mainFont: 'Open Sans', sans-serif;
+$mainFont: 'Futura', sans-serif;
