partial deliverable (all pages)

--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -4,28 +4,38 @@ footer.footer
             .row
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        .footer__icon
+                        i.fa.fa-truck
                         p.footer__text Envío sin cargo
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        .footer__icon
+                        i.fa.fa-credit-card
                         p.footer__text Todos los medios de pago
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        .footer__icon
+                        i.fa.fa-tag
                         p.footer__text Cotizaciones especiales
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        .footer__icon
+                        i.fa.fa-thumbs-up
                         p.footer__text Satisfacción garantizada
     .footer__secondary
         .container
             .row
-                .col-xs-24.col-sm-6
-                    .footer__logo
-                        img(src="images/logo-black.png")
-                .col-xs-24.col-sm-6
-                    
-                .col-xs-24.col-sm-6
-                .col-xs-24.col-sm-6
-                    
+                .col-xs-24.col-sm-6.text-center
+                    a.footer__logo(href="//www.maralewines.com" target="_blank")
+                        img(src="/images/logo-black.png")
+                .col-xs-24.col-sm-6.text-center
+                    p.footer__address Ruta Provincia 162, Maurin s/n, Media Agua, San Juan, Argentina
+                .col-xs-24.col-sm-6.text-center
+                    p.footer__contact
+                        a.footer__email(href="#" target="_blank") hospitalidad@maralawines.com
+                        br
+                        a.footer__phone(href="#" target="_blank") +54 9 2646 70-0146
+                .col-xs-24.col-sm-6.text-center
+                    ul.footer__social
+                        li
+                            a.fa.fa-facebook(href="https://www.facebook.com/maralewines/" target="_blank")
+                        li
+                            a.fa.fa-instagram(href="https://www.instagram.com/maralewines/" target="_blank")
+                        li
+                            a.fa.fa-twitter(href="https://twitter.com/maralewines?lang=es" target="_blank")
