--- a/src/_styles/pages/_home.scss
+++ b/src/_styles/pages/_home.scss
@@ -1,97 +1,179 @@
 .home {
-    &__hero {
+    overflow: hidden;
 
-        // height: 100vh;
-        // background: url('../images/home/valle1.jpg') center center / cover;
+    &__hero {
+        height: 120vh;
+        width: 100%;
+
+        @include mq(sm) {
+            height: 33.34vw;
+        }
 
         &__slide {
-            position: relative;
-            overflow: hidden;
-            display: flex;
+            height: 120vh;
+
+            @include mq(sm) {
+                display: inline-flex !important;
+                height: 33.34vw;
+            }
         }
 
         &__col {
-            height: 33.34vw;
+            height: 100%;
+
             &--image {
-                width: 66.66%;
-                background: url('../images/home/valle1.jpg') no-repeat center center;
-                background-size: 150%;
                 position: relative;
+                height: 100vh;
+
+                @include mq(sm) {
+                    width: 66.66%;
+                    height: auto;
+                }
+
+                img {
+                    position: absolute;
+                    height: 100%;
+                    width: auto;
+                    transform: translateX(-50%);
+
+                    @include mq(sm) {
+                        width: 100%;
+                        height: auto;
+                        transform: translateX(0);
+                    }
+                }
             }
 
             &--pattern {
-                background: url('');
-                width: 33.34%;
+                background: none;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                    width: 33.33%;
+                    background: url('../images/home/pattern1.gif');
+                }
             }
         }
 
         &__data {
             position: absolute;
             left: 50%;
-            top: 50%;
+            top: 20%;
             transform: translate3d(-50%, -50%, 0);
+
+            @include mq(sm) {
+                top: 50%;
+            }
         }
 
         &__title {
             text-align: center;
             color: $white;
-            font-size: 100px;
+            font-size: 45px;
             text-transform: uppercase;
             font-weight: 700;
             line-height: 1;
             margin: 0;
+
+            @include mq(sm) {
+                font-size: 7vw;
+            }
         }
 
-        &__text {
+        &__button {
             position: absolute;
             left: 50%;
-            top: 50%;
             transform: translate3d(-50%, -50%, 0);
             color: $white;
             background: $lila;
-            padding: 10px 20px;
-            font-size: 16px;
             text-transform: uppercase;
             border-radius: 50px;
+            font-size: 16px;
+            text-align: center;
+            width: 80%;
+            padding: 10px 20px;
+            top: 102px;
+
+            @include mq(sm) {
+                width: auto;
+                top: 50%;
+                font-size: 1.3vw;
+            }
         }
 
-        &__blanc-bottle {
+        &__bottles {
             position: absolute;
-            top: 20%;
-            right: 25%;
+            right: -17%;
+            bottom: 0;
+
+            @include mq(sm) {
+                right: 11%;
+            }
         }
     }
 
     &__malbec,
     &__blanc,
+    &__malbec-reserva,
     &__pasita {
-        height: 33.34vw;
+
+        @include mq(sm) {
+            height: 33.34vw;
+        }
 
         &__image {
             &--left {
                 position: relative;
                 overflow: hidden;
-                height: 33.34vw;
+                height: 33.34vh;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                }
 
                 img {
-                    height: 100%;
-                    width: auto;
+                    height: auto;
+                    width: 100%;
+                    transform: translateY(-30%);
+
+                    @include mq(sm) {
+                        height: 100%;
+                        width: auto;
+                        transform: translateY(0);
+                    }
                 }
             }
 
             &--bottle {
-                transform: rotate(20deg) scale3d(1.2,1.2,1.2);
-                padding-top: 5%;
+                position: absolute;
+                top: 15%;
+                left: 35%;
+                transform: rotate(15deg) scale3d(1.2,1.2,1.2);
+
+                @include mq(sm) {
+                    position: relative;
+                    transform: rotate(15deg) scale3d(1.5,1.5,1.5);
+                    left: 0;
+                }
             }
 
             &--right {
                 overflow: hidden;
-                height: 33.34vw;
+                height: 33.34vh;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                }
 
                 img {
-                    width: auto;
-                    height: 100%;
-                    transform: translateX(-35%);
+                    width: 100%;
+                    height: auto;
+
+                    @include mq(sm) {
+                        transform: translateX(-35%);
+                        width: auto;
+                        height: 100%;
+                    }
                 }
             }
         }
@@ -100,30 +182,55 @@
             display: flex;
             background: url('../images/home/pattern2.gif');
             overflow: hidden;
-            height: 33.34vw;
+            position: relative;
+            height: 75vh;
+
+            @include mq(sm) {
+                height: 33.34vw;
+            }
         }
 
         &__data {
-            width: 50%;
-            padding: 10% 0 10% 10%;
+            padding: 30px 0 0 30px;
+            width: 75%;
+
+            @include mq(sm) {
+                width: 50%;
+                padding: 10% 0 10% 10%;
+            }
         }
 
         &__title {
             margin: 0;
             color: $white;
             text-transform: uppercase;
-            margin-bottom: 10%;
-            font-size: 40px;
             font-weight: 700;
+            font-size: 40px;
+            margin-bottom: 20px;
+
+            @include mq(sm) {
+                margin-bottom: 10%;
+                font-size: 40px;
+            }
         }
 
         &__text {
             color: $white;
+            margin-bottom: 30px;
+            font-size: 18px;
+
+            @include mq(sm) {
+                margin-bottom: 10%;
+            }
         }
 
         &__price {
             color: $white;
-            margin-bottom: 10%;
+            margin-bottom: 30px;
+
+            @include mq(sm) {
+                margin-bottom: 10%;
+            }
         }
 
         &__button {
@@ -132,7 +239,13 @@
             border-radius: 50px;
             font-weight: 700;
             color: $black;
-            font-size: 14px;
+            font-size: 16px;
+            display: inline-block;
+
+            @include mq(sm) {
+                font-size: 14px;
+
+            }
         }
     }
 
@@ -143,17 +256,31 @@
 
         &__image {
             &--bottle  {
-                transform: rotate(0) scale3d(1.5,1.5,1.5) translateY(-30%);
+                transform: rotate(0) translateY(-8%) translateX(8%);
+
+                @include mq(sm) {
+                    transform: rotate(0) scale3d(1.5,1.5,1.5) translateY(-30%);
+                }
             }
 
             &--right {
                 overflow: hidden;
-                height: 33.34vw;
+                height: 33.34vh;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                }
 
                 img {
                     width: auto;
-                    height: 100%;
-                    transform: translateX(0);
+                    height: 180%;
+                    transform: translateX(0) translateY(-20%);
+
+                    @include mq(sm) {
+                        width: auto;
+                        height: 100%;
+                        transform: translateX(0) translateY(0);
+                    }
                 }
             }
         }
@@ -161,7 +288,40 @@
 
 
     &__malbec-reserva {
-        height: 33.34vw;
+        .row {
+            display: flex;
+            flex-direction: column;
+
+            @include mq(sm) {
+                flex-direction: row;
+            }
+        }
+
+        &__position {
+            &:nth-child(1) {
+                order: 2;
+
+                @include mq(sm) {
+                    order: 1;
+                }
+            }
+
+            &:nth-child(2) {
+                order: 3;
+
+                @include mq(sm) {
+                    order: 2;
+                }
+            }
+
+            &:nth-child(3) {
+                order: 1;
+
+                @include mq(sm) {
+                    order: 3;
+                }
+            }
+        }
 
         &__image {
             overflow: hidden;
@@ -172,33 +332,83 @@
                 height: 100%;
             }
 
-            &--right {
+            &--left {
+                height: 33.34vh;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                }
+
                 img {
-                    transform: translateX(-30%);
+                    height: auto;
+                    width: 100%;
+                }
+            }
+
+            &--right {
+                height: 33.34vh;
+
+                @include mq(sm) {
+                    height: 33.34vw;
+                }
+
+                img {
+                    width: 100%;
+                    height: auto;
+
+                    @include mq(sm) {
+                        transform: translateX(-30%);
+                        width: auto;
+                        height: 100%;
+                    }
                 }
             }
 
             &--bottle {
-                width: 50%;
-                padding-left: 5%;
-                img {
-                    transform: rotate(-15deg);
+                width: 100%;
+                height: 100%;
 
+                @include mq(sm) {
+                    width: 50%;
+                    padding-left: 5%;
+                    height: auto;
+                    right: 0;
+                }
+
+                img {
+                    position: absolute;
+                    transform: translate(-50%) rotate(-30deg) scale3d(.9,.9,.9);
+                    left: 50%;
+                    top: -10%;
+
+                    @include mq(sm) {
+                        left: 45%;
+                        transform: translate(-50%) rotate(-30deg) scale3d(.7,.7,.7);
+                    }
                 }
             }
         }
 
         &__wrapper {
             background: url('../images/home/pattern4.gif');
-            height: 33.34vw;
             display: flex;
+            height: 75vh;
+
+            @include mq(sm) {
+                height: 33.34vw;
+            }
         }
 
         &__data {
-            height: 100%;
-            width: 50%;
-            padding-right: 10%;
-            padding-top: 10%;
+            padding: 30px 0 0 30px;
+            width: 75%;
+
+            @include mq(sm) {
+                height: 100%;
+                width: 50%;
+                padding-right: 10%;
+                padding-top: 10%;
+            }
         }
 
         &__title {
@@ -212,6 +422,7 @@
 
         &__text {
             color: $white;
+
         }
 
         &__price {
@@ -226,6 +437,26 @@
             font-weight: 700;
             color: $black;
             font-size: 14px;
+        }
+    }
+
+    &__pasita {
+        &__image {
+            &--left {
+                display: none;
+
+                @include mq(sm) {
+                    display: block;
+                }
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+
+        &__wrapper {
+            background: url('../images/home/pattern1.gif');
         }
     }
 }
