--- a/src/index.jade
+++ b/src/index.jade
@@ -1,19 +1,21 @@
 extends _layouts/base
 
+include _modules/slider/slider
+
 block content
     main.home
         section.home__hero
-            //- +slider('home__hero__slider')
-            .home__hero__slide
-                .home__hero__col.home__hero__col--image
-                    .home__hero__data
-                        h1.home__hero__title tesoros escondidos
-                        p.home__hero__text oasis de san juan
-                .home__hero__col.home__hero__col--pattern
-                .home__hero__blanc-bottle
-                    img(src="images/home/blanc.png")
-                .home__hero__blanc-bottle
-                    img(src="images/home/blanc.png")
+            +slider('home__hero__slider')
+                each item in site.data.slider
+                    .home__hero__slide
+                        .home__hero__col.home__hero__col--image
+                            img(src=item.backgroundUrl)
+                            .home__hero__data
+                                h1.home__hero__title=item.title
+                                a.home__hero__button(href="#")=item.button
+                        .home__hero__col.home__hero__col--pattern
+                            .home__hero__bottles
+                                img(src=item.winesUrl)
 
         section.home__malbec
             .container-fluid
@@ -51,18 +53,18 @@ block content
         section.home__malbec-reserva
             .container-fluid
                 .row.nopadding
-                    .col-xs-24.col-sm-6
-                        .home__malbec-reserva__image
-                            img(src="images/home/slide1.jpg")
-                    .col-xs-24.col-sm-6
+                    .col-xs-24.col-sm-6.home__malbec-reserva__position
+                        .home__malbec-reserva__image.home__malbec-reserva__image--left
+                            img(src="images/home/marale4.jpg")
+                    .col-xs-24.col-sm-6.home__malbec-reserva__position
                         .home__malbec-reserva__image.home__malbec-reserva__image--right
                             img(src="images/home/valle2.jpg")
-                    .col-xs-24.col-sm-12
+                    .col-xs-24.col-sm-12.home__malbec-reserva__position
                         .home__malbec-reserva__wrapper
                             .home__malbec-reserva__image.home__malbec-reserva__image--bottle
                                 img(src="images/home/malbec-2.png")
                             .home__malbec-reserva__data
-                                h2.home__malbec-reserva__title Sauvignon Blanc
+                                h2.home__malbec-reserva__title Malbec Reserva
                                 p.home__malbec-reserva__text Frutos silvestres y violetas con exquisita complejidad.
                                 h2.home__malbec-reserva__price $250
                                 a.home__malbec-reserva__button Comprar ahora
