icons and images

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -9,10 +9,10 @@ header.header
                     li
                         a(href=item.url)= item.name
         .header__buttons
-            button.header__button
-                i.material-icons search
-            a.header__button
-                i.fa.fa-shopping-bag
+            a.header__button(href="#")
+                img(src="/images/home/icon-search.png")
+            a.header__button(href="/carro-de-compras")
+                img(src="/images/home/icon-cart.png")
         .header__hamburguer.wow.fadeInRight
             span
             span
