--- a/src/_styles/pages/_home.scss
+++ b/src/_styles/pages/_home.scss
@@ -453,6 +453,33 @@
                     height: auto;
                 }
             }
+
+            &--bottle {
+                position: absolute;
+                top: 0;
+                left: 35%;
+                transform: rotate(0) scale3d(1.2,1.2,1.2);
+
+                @include mq(sm) {
+                    position: relative;
+                    transform: rotate(0) scale3d(1.2,1.2,1.2);
+                    left: 0;
+                }
+            }
+        }
+
+        &__data {
+            padding: 30px;
+            width: 75%;
+            position: relative;
+            z-index:2;
+
+            @include mq(sm) {
+                height: 100%;
+                width: 50%;
+                padding-right: 10%;
+                padding-top: 10%;
+            }
         }
 
         &__wrapper {
