--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -10,8 +10,8 @@ doctype html
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title PROYECT TITLE
-    meta(name='description', content= 'A new Yeogurt application')
+    title MARALE Tienda
+    meta(name='description', content= 'Marale Tienda')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block meta
     block stylesheets
