--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -4,19 +4,23 @@ footer.footer
             .row
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        i.fa.fa-truck
+                        .footer__icon
+                            img(src="/images/home/icon-truck.png")
                         p.footer__text Envío sin cargo
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        i.fa.fa-credit-card
+                        .footer__icon
+                            img(src="/images/home/icon-card.png")
                         p.footer__text Todos los medios de pago
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        i.fa.fa-tag
+                        .footer__icon
+                            img(src="/images/home/icon-tag.png")
                         p.footer__text Cotizaciones especiales
                 .col-xs-24.col-sm-6
                     .footer__wrapper
-                        i.fa.fa-thumbs-up
+                        .footer__icon
+                            img(src="/images/home/icon-thumb.png")
                         p.footer__text Satisfacción garantizada
     .footer__secondary
         .container
