--- a/src/_modules/footer/footer.scss
+++ b/src/_modules/footer/footer.scss
@@ -4,6 +4,19 @@
         height: auto;
     }
 
+    &__icon {
+        width: 48px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 15px;
+
+        img {
+            max-width: 100%;
+        }
+    }
+
     &__primary {
         background: $mainColor;
         padding: 60px 20px 20px 20px;
